classDiagram
    class NotificationController {
        -EmailService emailService
        -OtpService otpService
        +sendAlert(EmailRequest)
        +sendTemplateEmail(TemplateRequest)
        +validateOtp(OtpValidationRequest)
    }

    class NotificationTemplate {
        <<enumeration>>
        REGISTRATION_OTP
        PASSWORD_RESET_OTP
        ROLE_UPGRADE_OTP
        EVENT_STATUS_UPDATE
        TEAM_INVITATION
    }

    class EmailService {
        -JavaMailSender mailSender
        -TemplateEngine templateEngine
        +sendHtmlEmail(to, subject, template, vars)
    }

    class OtpService {
        -StringRedisTemplate redisTemplate
        -SecureRandom secureRandom
        +generateOtp(email)
        +validateOtp(email, otp)
    }

    class EmailRequest {
        +String to
        +String subject
        +String message
    }

    NotificationController --> EmailService
    NotificationController --> OtpService
    NotificationController ..> NotificationTemplate
    EmailService ..> EmailRequest